# src/main/java/academy/codilas/LoyaltyCard/controller/DTO/NewCustomerDTO.java
@@ -1,0 +1,65 @@
+package academy.codilas.LoyaltyCard.controller.DTO;
+
+import java.util.Objects;
+
+public class NewCustomerDTO {
+
+    private String name;
+    private String phone;
+    private String email;
+
+    private NewCustomerDTO() {
+
+    }
+
+    public NewCustomerDTO(int id, String name, String phone, String email) {
+        this.name = name;
+        this.phone = phone;
+        this.email = email;
+    }
+
+    public String getPhone() {
+        return phone;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setPhone(String phone) {
+        this.phone = phone;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    @Override
+    public String toString() {
+        return "CustomerDTO{" +
+                ", name='" + name + '\'' +
+                ", phone='" + phone + '\'' +
+                ", email='" + email + '\'' +
+                '}';
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (o == null || getClass() != o.getClass()) return false;
+        NewCustomerDTO that = (NewCustomerDTO) o;
+        return Objects.equals(name, that.name) && Objects.equals(phone, that.phone) && Objects.equals(email, that.email);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(name, phone, email);
+    }
+}
