# src/main/java/academy/codilas/LoyaltyCard/controller/HelthCheckController.java
@@ -1,0 +1,18 @@
+package academy.codilas.LoyaltyCard.controller;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+public class HelthCheckController {
+    @GetMapping("/healthcheck")
+    public ResponseEntity<String> healthCheck(){
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body("server start and running");
+    }
+}
